# HoneyPlanet

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
docs/: SPEC.md  deploy.md  setup-anthropic.md  setup-google-maps.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_booking_notice.py  0003_widen_transit_mode.py  0004_task.py  0005_event.py  0006_spending.py
scripts/: apply_booked_hotels.py  apply_flight_fares.py  build_graph.py  db_check.py  enrich_places.py  estimate_costs.py  finalize_costs.py  find_events.py  ingest.py  init_db.py  optimize_budget.py  plan_thailand_new.py  plan_tokyo_shopping.py  plan_trip.py  refresh_plan.py  restructure_japan.py  seed_plan.py  seed_sources.py  set_task_dates.py  show_documents.py  verify_plan.py
seeds/: japan_urls.txt
src/trip_planner/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  web.py
src/trip_planner/agents/: __init__.py  budget.py  hotel.py  shared.py  transport.py
src/trip_planner/api/: auth.py  chat.py  health.py  places.py  plan.py  pwa.py  tasks.py
src/trip_planner/chat/: __init__.py  agent.py
src/trip_planner/enrich/: __init__.py  events.py  google_places.py  seed_places.py
src/trip_planner/ingest/: __init__.py  extract.py  fetcher.py  pipeline.py  robots.py  sources.py
src/trip_planner/plan/: __init__.py  costs.py  planner.py  verifier.py  writer.py
tests/: test_agents.py  test_costs.py  test_enrich.py  test_extract.py  test_fetcher.py  test_health.py  test_robots.py
