[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trip-planner"
version = "0.0.1"
description = "Offline-first honeymoon trip planner — scrape, categorize, knowledge-graph, and plan Japan & Thailand."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nadav Kahanowich" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "geoalchemy2>=0.14",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Pulled in per phase so the base install stays light.
ingest = ["trafilatura>=1.8", "beautifulsoup4>=4.12", "selectolax>=0.3"]  # Phase 1
llm = ["anthropic>=0.25"]                                                  # Phase 2
geo = ["googlemaps>=4.10"]                                                 # Phase 2
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.9"]

[tool.hatch.build.targets.wheel]
packages = ["src/trip_planner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
